# praktikum_10_3_FH_Aachen_BinaererSuchbaum

./: BaumKnoten.cpp  BaumKnoten.h  BinaererSuchbaum.cpp  BinaererSuchbaum.h  CMakeLists.txt  suchbaum_klasse_main.cpp  test_binaerer_suchbaum_klasse.cpp
